final-no-comments

--- a/NameSorter/NameSorter/Properties/launchSettings.json
+++ b/NameSorter/NameSorter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NameSorter": {
       "commandName": "Project",
-      "commandLineArgs": "./temppp-list.txt"
+      "commandLineArgs": "./unsorted-names-list.txt"
     }
   }
 }
