--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: csharp
 mono: none
 dotnet: 3.1.416
 solution: NameSorter.sln
+install:
+- dotnet restore ./NameSorter.sln
 script:
-  - dotnet restore
-  - dotnet test
+ - dotnet build ./NameSorter.sln
+ - dotnet test
